# lirpc

./: Cargo.toml  README.md  justfile  test.py
.github/workflows/: rust.yaml
client_examples/auth/: api_spec.json
client_examples/greeter/: api_spec.json
client_examples/with_app_state/: api_spec.json
example-contracts/: README.md  auth.json  greeter.json  greeter_stream.json  with_app_state.json
lirpc/: Cargo.toml  build.rs
lirpc/examples/: auth.rs  auth_client.rs  greeter.rs  greeter_client.rs  greeter_stream.rs  greeter_stream_client.rs  with_app_state.rs  with_app_state_client.rs
lirpc/src/: api_spec.rs  codegen.rs  connection_details.rs  error.rs  handler.rs  lib.rs  lirpc_message.rs  lirpc_type.rs  macros.rs  server.rs  service.rs  stream_manager.rs  translatable.rs  type_definition.rs
lirpc/src/codegen/: class_members.rs  class_methods.rs  error.rs  mod.rs  tests.rs  util.rs
lirpc/src/codegen/matching_methods/: match.rs  match_partial.rs  match_partial_with_default.rs  mod.rs  util.rs
lirpc/src/codegen/rust_client_codegen/: mod.rs
lirpc/src/codegen/test_results/: basic_enum.ts  enum_with_named_variant_fields.ts  enum_with_tuple_variant.ts
lirpc/src/codegen/typescript_client_codegen/: mod.rs
lirpc/src/contracts/: compile.rs  contract_file.rs  error.rs  lirpc_method_file.rs  lirpc_type_file.rs  mod.rs  serializable_type.rs
lirpc/src/extractors/: app_state.rs  connection_state.rs  error.rs  message.rs  mod.rs  output.rs  output_stream.rs  state.rs
lirpc_cli/: Cargo.toml
lirpc_cli/src/: main.rs
lirpc_macros/: Cargo.toml
lirpc_macros/src/: lib.rs  lirpc_method.rs  lirpc_type.rs  serializable_type.rs
lirpc_rs_client/: Cargo.toml
lirpc_rs_client/examples/: greeter_client.rs
lirpc_rs_client/src/: lib.rs
lirpc_rs_codegen/: Cargo.toml
lirpc_rs_codegen/src/: lib.rs  tests.rs
lirpc_sandbox/: Cargo.toml
lirpc_sandbox/src/: main.rs
lirpc_ts_client/: package-lock.json  package.json  tsconfig.examples.json  tsconfig.json
lirpc_ts_client/examples/: greeter_client.ts
lirpc_ts_client/src/: client.test.ts  client.ts  error.ts  index.ts  (+3 more)
ts_codegen/: Cargo.toml
(+37 files in other folders)
