[package]
name = "lirpc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tokio-tungstenite = "0.28.0"
futures = "0.3.31"

[dev-dependencies]

# for examples
tracing-subscriber = "0.3.22"
