[package]
name = "lirpc"
version = "0.1.0"
edition = "2024"

[lib]
name = "lirpc"
path = "src/lib.rs"

[[bin]]
name = "lirpc-cli"
path = "bin/lirpc_cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tokio-tungstenite = "0.28"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
syn = { version = "2.0.111", features = ["full", "extra-traits"] }
glob = "0.3.3"

[dev-dependencies]

# for the examples
lirpc_macros = { path = "../lirpc_macros" }
tracing-subscriber = "0.3.22"
