[package]
name = "lirpc"
version = "0.1.0"
edition = "2024"

[lib]
name = "lirpc"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tokio-tungstenite = "0.28"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
ts_codegen = { path = "../ts_codegen" }
lirpc_macros = { path = "../lirpc_macros" }

[dev-dependencies]
pretty_assertions = "1.4.1"

# for the examples
tracing-subscriber = "0.3.22"
